--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
     <section id="game">
       <time></time>
       <p></p>
-      <input autofocus>
+      <input name="paragraph" autofocus autocomplete="off">
+    </section>
+    <section id="results">
+      <h2>wpm</h2>
+      <h3 id="results-wpm"></h3>
+
+      <h2>acc</h2>
+      <h3 id="results-accuracy"></h3>
+
+      <buton class="button-reload">
+        <svg width="24"  height="24"  viewBox="0 0 23 23"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-reload"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.933 13.041a8 8 0 1 1 -9.925 -8.788c3.899 -1 7.935 1.007 9.425 4.747" /><path d="M20 4v5h-5" /></svg>
+      </buton>
     </section>
   </main>
 
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </body>
 </html>
